// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileOption should render correctly 1`] = `
<Styled(TouchableOpacity)
  isSelected={false}
  onPress={[Function]}
>
  <Styled(View)>
    <Styled(BodyCopy)
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      text="Parent"
    />
  </Styled(View)>
</Styled(TouchableOpacity)>
`;

exports[`TileOption should render with selected tile 1`] = `
<Styled(TouchableOpacity)
  isSelected={true}
  onPress={[Function]}
>
  <Styled(View)>
    <Styled(BodyCopy)
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      text="Parent"
    />
  </Styled(View)>
</Styled(TouchableOpacity)>
`;
